--- a/오픈소스_데이터_분석_6강.ipynb
+++ b/오픈소스_데이터_분석_6강.ipynb
@@ -332,11 +332,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 방통대 과제 해보기"
+        "# 방통대 과제 해보기[링크 텍스트](https://)"
       ],
       "metadata": {
         "id": "nLlC3gVldf6x"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "import json\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Lifs2E1wdq1J"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
