Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_6강.ipynb
+++ b/오픈소스_데이터_분석_6강.ipynb
@@ -344,6 +344,10 @@
         "import requests\n",
         "import json\n",
         "\n",
+        "url = \"https://apis.data.go.kr/1613000/ApHusEnergyUseInfoOfferServiceV2\"\n",
+        "serviceKey = \"0f6bbcacb363a3809c03696ba2df52dddcf07981a315ca5d5c4092f1aaeafefc\"\n",
+        "searchDate = \"\"\n",
+        "\n",
         "\n"
       ],
       "metadata": {
