Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_6강.ipynb
+++ b/오픈소스_데이터_분석_6강.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -341,20 +340,154 @@
     {
       "cell_type": "code",
       "source": [
-        "import requests\n",
-        "import json\n",
+        "# 2015년 1월부터 2024년 12월까지 문자열 배열 만들기\n",
+        "def get_year_months():\n",
+        "  year_months = []\n",
+        "  for year in range(2015, 2024+1):\n",
+        "    for month in range(1,12+1):\n",
+        "      year_months.append(f'{year}{month:02d}')\n",
+        "  return year_months\n",
         "\n",
-        "url = \"https://apis.data.go.kr/1613000/ApHusEnergyUseInfoOfferServiceV2\"\n",
-        "serviceKey = \"0f6bbcacb363a3809c03696ba2df52dddcf07981a315ca5d5c4092f1aaeafefc\"\n",
-        "searchDate = \"\"\n",
-        "\n",
-        "\n"
+        "months = get_year_months();\n",
+        "print(f'{months}')"
       ],
       "metadata": {
-        "id": "Lifs2E1wdq1J"
+        "id": "I9I_JvrErnTO",
+        "outputId": "10c4bd55-8e92-4e6a-a814-c3bdbf2f7f45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['201501', '201502', '201503', '201504', '201505', '201506', '201507', '201508', '201509', '201510', '201511', '201512', '201601', '201602', '201603', '201604', '201605', '201606', '201607', '201608', '201609', '201610', '201611', '201612', '201701', '201702', '201703', '201704', '201705', '201706', '201707', '201708', '201709', '201710', '201711', '201712', '201801', '201802', '201803', '201804', '201805', '201806', '201807', '201808', '201809', '201810', '201811', '201812', '201901', '201902', '201903', '201904', '201905', '201906', '201907', '201908', '201909', '201910', '201911', '201912', '202001', '202002', '202003', '202004', '202005', '202006', '202007', '202008', '202009', '202010', '202011', '202012', '202101', '202102', '202103', '202104', '202105', '202106', '202107', '202108', '202109', '202110', '202111', '202112', '202201', '202202', '202203', '202204', '202205', '202206', '202207', '202208', '202209', '202210', '202211', '202212', '202301', '202302', '202303', '202304', '202305', '202306', '202307', '202308', '202309', '202310', '202311', '202312', '202401', '202402', '202403', '202404', '202405', '202406', '202407', '202408', '202409', '202410', '202411', '202412']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import ssl\n",
+        "print(ssl.OPENSSL_VERSION)\n",
+        "print(\"TLS 1.2 지원:\", ssl.HAS_TLSv1_2)\n",
+        "print(\"TLS 1.3 지원:\", ssl.HAS_TLSv1_3)"
+      ],
+      "metadata": {
+        "id": "_iXzyzvtp3Lo",
+        "outputId": "674893d3-c489-400d-db2b-86af31d6fcd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OpenSSL 3.0.2 15 Mar 2022\n",
+            "TLS 1.2 지원: True\n",
+            "TLS 1.3 지원: True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "import json\n",
+        "import pandas as pd\n",
+        "\n",
+        "def get_year_months():\n",
+        "  year_months = []\n",
+        "  for year in range(2015, 2024+1):\n",
+        "    for month in range(1,12+1):\n",
+        "      year_months.append(f'{year}{month:02d}')\n",
+        "  return year_months\n",
+        "\n",
+        "data = {}\n",
+        "\n",
+        "url = \"http://apis.data.go.kr/1613000/ApHusEnergyUseInfoOfferServiceV2/getWntyAvrgEnergyUseAmountInfoSearchV2\"\n",
+        "serviceKey = \"0f6bbcacb363a3809c03696ba2df52dddcf07981a315ca5d5c4092f1aaeafefc\"\n",
+        "\n",
+        "try :\n",
+        "  for month in get_year_months() :\n",
+        "    params = {\n",
+        "        'serviceKey': serviceKey,\n",
+        "        'searchDate': month\n",
+        "    }\n",
+        "    response = requests.get(url,params = params)\n",
+        "    response.raise_for_status()\n",
+        "\n",
+        "    # 데이터 넣기\n",
+        "    item = response.json()['response']['body']['item']\n",
+        "    data[month] = item\n",
+        "\n",
+        "  print('API 호출 완료')\n",
+        "except Exception as e:\n",
+        "  print(f\"오류발생 {e}\")"
+      ],
+      "metadata": {
+        "id": "SKRNjd-ytVnt",
+        "outputId": "e9d919b2-9717-4940-df58-610404e460d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "API 호출 완료\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.DataFrame.from_dict(data, orient='index')\n",
+        "\n",
+        "print(f'{df.info()}')"
+      ],
+      "metadata": {
+        "id": "C2jEQ7fJ0tZ4",
+        "outputId": "3d4391f6-c2ca-4240-d730-1418fd5aae94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 120 entries, 201501 to 202412\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column     Non-Null Count  Dtype\n",
+            "---  ------     --------------  -----\n",
+            " 0   heat       120 non-null    int64\n",
+            " 1   waterHot   120 non-null    int64\n",
+            " 2   gas        120 non-null    int64\n",
+            " 3   elect      120 non-null    int64\n",
+            " 4   waterCool  120 non-null    int64\n",
+            "dtypes: int64(5)\n",
+            "memory usage: 5.6+ KB\n"
+          ]
+        }
+      ]
     }
   ]
 }
