--- a/오픈소스_데이터_분석_7강.ipynb
+++ b/오픈소스_데이터_분석_7강.ipynb
@@ -60,8 +60,12 @@
         "df.isnull()\n",
         "\n",
         "## 열별, 행별 결측치 개수 확인\n",
+        "df.isnull().sum() ## 헤더별로 결측치 갯수 확인\n",
+        "\n",
+        "df.isnull().sum(axis=1) ## 인덱스별로 확인\n",
         "\n",
         "## 특정 열, 행 결측치 확인\n",
+        "df[df.isnull().any(axis=1)] # 결측치 데이터\n",
         "\n",
         "## 결측치가 아닌 항목 확인\n",
         "\n",
@@ -69,28 +73,25 @@
       ],
       "metadata": {
         "id": "tA9rA_leY5Du",
-        "outputId": "3c00bb87-f44f-49c1-aed7-1096f8206b9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
+          "height": 112
+        },
+        "outputId": "3fc5fd0f-4086-401c-eeb0-d83838fe81c5"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      이름     나이     도시     점수\n",
-              "0  False  False  False  False\n",
-              "1  False  False   True  False\n",
-              "2  False   True  False   True\n",
-              "3  False  False  False  False\n",
-              "4  False  False  False  False"
+              "    이름    나이    도시    점수\n",
+              "1  이영희  30.0  None  85.0\n",
+              "2  박민수   NaN    인천   NaN"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-52de0d9d-7a81-4e8a-8c21-3f4b846d4785\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9fe24fa4-b463-4863-a9ff-fedeaed3e3d3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -117,39 +118,18 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
+              "      <td>이영희</td>\n",
+              "      <td>30.0</td>\n",
+              "      <td>None</td>\n",
+              "      <td>85.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
+              "      <td>박민수</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>인천</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -157,7 +137,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-52de0d9d-7a81-4e8a-8c21-3f4b846d4785')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9fe24fa4-b463-4863-a9ff-fedeaed3e3d3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -209,12 +189,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-52de0d9d-7a81-4e8a-8c21-3f4b846d4785 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9fe24fa4-b463-4863-a9ff-fedeaed3e3d3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-52de0d9d-7a81-4e8a-8c21-3f4b846d4785');\n",
+              "        const element = document.querySelector('#df-9fe24fa4-b463-4863-a9ff-fedeaed3e3d3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -234,8 +214,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-5f9e51d5-2ee4-4b59-9050-12d2e26c29fd\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5f9e51d5-2ee4-4b59-9050-12d2e26c29fd')\"\n",
+              "    <div id=\"df-c2922b33-0759-46d8-b3b6-368ff00c5752\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c2922b33-0759-46d8-b3b6-368ff00c5752')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -354,7 +334,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-5f9e51d5-2ee4-4b59-9050-12d2e26c29fd button');\n",
+              "            document.querySelector('#df-c2922b33-0759-46d8-b3b6-368ff00c5752 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -366,11 +346,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"## \\uacb0\\uce21\\uce58 \\ube44\\uc728\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"\\uc774\\ub984\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          false\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\ub098\\uc774\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          true\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\ub3c4\\uc2dc\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          true\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\uc810\\uc218\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          true\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"## \\uacb0\\uce21\\uce58 \\ube44\\uc728\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"\\uc774\\ub984\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"\\ubc15\\ubbfc\\uc218\",\n          \"\\uc774\\uc601\\ud76c\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\ub098\\uc774\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 30.0,\n        \"max\": 30.0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          30.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\ub3c4\\uc2dc\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"\\uc778\\ucc9c\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\uc810\\uc218\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": 85.0,\n        \"max\": 85.0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          85.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 8
         }
       ]
     },
