Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_7강.ipynb
+++ b/오픈소스_데이터_분석_7강.ipynb
@@ -246,10 +246,20 @@
         "})\n",
         "\n",
         "### 사분위 범위 경계값 계산\n",
-        "\n",
+        "q1 = df['점수'].quantile(0.25)\n",
+        "q3 = df['점수'].quantile(0.75)\n",
+        "iqr = q3 - q1\n",
+        "하한값 = q1 - 1.5 * iqr\n",
+        "상한값 = q3 + 1.5 * iqr\n",
         "\n",
         "### IQR 통계량 출력\n",
-        "\n"
+        "print(q1)\n",
+        "print(q3)\n",
+        "print(iqr)\n",
+        "print(하한값)\n",
+        "print(상한값)\n",
+        "\n",
+        "# 하한값과 상한값 외부로 빠진 데이터는 결측치라 생각하고 제외한다."
       ],
       "metadata": {
         "id": "tNKm91q1ZCWQ"
