Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_7강.ipynb
+++ b/오픈소스_데이터_분석_7강.ipynb
@@ -262,10 +262,26 @@
         "# 하한값과 상한값 외부로 빠진 데이터는 결측치라 생각하고 제외한다."
       ],
       "metadata": {
-        "id": "tNKm91q1ZCWQ"
+        "id": "tNKm91q1ZCWQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a766893e-4f58-4cb7-9309-e18e98e187d1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "63.25\n",
+            "85.0\n",
+            "21.75\n",
+            "30.625\n",
+            "117.625\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -290,19 +306,42 @@
         "    '점수': 점수_데이터\n",
         "})\n",
         "\n",
-        "### Z-점수 계산\n",
+        "### Z-점수 계산 평균점수를 이용한다.\n",
+        "점수_평균 = df['점수'].mean()\n",
+        "점수_표준편차 = df['점수'].std()\n",
+        "df['점수_Z'] = (df['점수'] - 점수_평균) / 점수_표준편차\n",
+        "df\n",
         "\n",
         "### 임계값 설정 및 이상치 여부 판단\n",
+        "임계값 = 2\n",
+        "df['이상치여부'] = df['점수_Z'].abs() > 임계값\n",
         "\n",
         "### 이상치 데이터 출력\n",
+        "df[df['이상치여부']] # bool 인덱싱을 사용하여 조회\n",
         "\n",
-        "### 이상치 비율 출력\n"
+        "### 이상치 비율 출력 이상치 여부를 가지고 0,1 로 평균을 내면 이상치 여부의 평균을 구할 수 있다.\n",
+        "df['이상치여부'].mean() * 100"
       ],
       "metadata": {
-        "id": "oPs_WaNrZD-4"
+        "id": "oPs_WaNrZD-4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4b796ad8-a0fb-45b5-dcb8-89d33f6d43bf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(12.5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
