--- a/오픈소스_데이터_분석_7강.ipynb
+++ b/오픈소스_데이터_분석_7강.ipynb
@@ -194,7 +194,7 @@
         "id": "DWhjSi4wY-P1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 860
         },
         "outputId": "218cbb0e-2e86-4ccb-d00f-02210e136ba4"
       },
@@ -362,21 +362,42 @@
         "df = pd.read_csv(file_path)\n",
         "print(df.isnull().sum())\n",
         "\n",
+        "# 결측치가 2개이상인 경우는 삭제한다. 칼럼의 갯수가 4개이상 남겨있는 것만 가져온다.\n",
         "df_cleaned = df.dropna(thresh=df.shape[1] - 1)\n",
         "\n",
-        "### 나이, 소득 평균값 대치 및 결과 출력\n",
+        "# 결측치를 평균값으로 채우거나 선형보간법으로 채운다.\n",
         "\n",
+        "### 나이, 소득 평균값 대치 및 결과 출력\n",
+        "# 나이와 소득의 평균으로 채워라\n",
+        "df_cleaned.loc[:,['나이','소득']] = df_cleaned[['나이','소득']].fillna(df_cleaned[['나이','소득']].mean())\n",
         "\n",
         "### 지출, 평균구매횟수 선형보간법 적용\n",
-        "\n",
+        "df_cleaned.loc[:,['지출','평균구매횟수']] = df_cleaned[['지출','평균구매횟수']].interpolate(method='linear')\n",
         "\n",
         "df_cleaned.to_csv(\"cleaned_large_shopping_customer.csv\", index=False, encoding=\"utf-8-sig\")"
       ],
       "metadata": {
-        "id": "4j-um7-UZHbs"
+        "id": "4j-um7-UZHbs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9248f291-4d8d-4a9f-ce24-a60e8205581a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ID         0\n",
+            "나이        50\n",
+            "소득        50\n",
+            "지출        50\n",
+            "평균구매횟수    50\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
