--- a/오픈소스_데이터_분석_7강.ipynb
+++ b/오픈소스_데이터_분석_7강.ipynb
@@ -2031,24 +2031,79 @@
       "cell_type": "code",
       "source": [
         "## 판매, 거래 데이터 통합\n",
-        "\n",
+        "train_with_trans = pd.merge(\n",
+        "    train_cleaned, transactions,\n",
+        "    on=['date','store_nbr'],\n",
+        "    how='left' # 같은 값들만 같은 행에 나열될 수 있도록 한다.\n",
+        ")\n",
         "\n",
         "## 매장 데이터 통합\n",
-        "\n",
+        "train_with_store = pd.merge(\n",
+        "    train_with_trans, stores,\n",
+        "    on=['store_nbr'],\n",
+        "    how='left'\n",
+        ")\n",
         "\n",
         "## 원유 데이터 통합\n",
-        "\n",
+        "train_final = pd.merge(\n",
+        "    train_with_store, oil_cleaned,\n",
+        "    on='date',\n",
+        "    how='left'\n",
+        ")\n",
         "\n",
         "print(\"최종 데이터셋 정보:\")\n",
         "print(f\"행 개수: {train_final.shape[0]}, 열 개수: {train_final.shape[1]}\")\n",
         "print(train_final.columns.tolist())\n",
-        "print(train_final.head())"
+        "print(train_final.head())\n",
+        "\n",
+        "# ● 데이터 문제 해결 방법은 다양하며, 상황에 맞는 적절한 방법을 선택해야 한다.\n",
+        "# ● 데이터 전처리는 많은 시간과 노력이 소모되므로 효율적인 전략이 중요하다.\n",
+        "# ● describe(), info() 함수를 통해 데이터의 기술 통계량과 구조를 파악한다.\n",
+        "# ● isnull(), isna() 함수를 사용하여 결측치를 탐지한다.\n",
+        "# ● interpolate(), fillna() 함수를 사용하여 결측치를 처리한다.\n",
+        "# ● IQR 방식이나 Z-점수를 활용하여 이상치를 탐지하고 처리한다.\n",
+        "# ● to_datetime() 함수와 dt 접근자를 사용하여 날짜 데이터를 변환하고 속성을 추출한다.\n",
+        "# ● merge() 함수를 사용하여 데이터셋을 통합한다."
       ],
       "metadata": {
-        "id": "nxAInLIwajY6"
+        "id": "nxAInLIwajY6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "99e7130d-5d77-4e23-9007-04edb764f262"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "최종 데이터셋 정보:\n",
+            "행 개수: 3000888, 열 개수: 19\n",
+            "['id', 'date', 'store_nbr', 'family', 'sales', 'onpromotion', 'year', 'month', 'day', 'dayofweek', 'weekend', 'is_month_start', 'is_month_end', 'transactions', 'city', 'state', 'type', 'cluster', 'dcoilwtico']\n",
+            "   id       date  store_nbr      family  sales  onpromotion  year  month  day  \\\n",
+            "0   0 2013-01-01          1  AUTOMOTIVE    0.0            0  2013      1    1   \n",
+            "1   1 2013-01-01          1   BABY CARE    0.0            0  2013      1    1   \n",
+            "2   2 2013-01-01          1      BEAUTY    0.0            0  2013      1    1   \n",
+            "3   3 2013-01-01          1   BEVERAGES    0.0            0  2013      1    1   \n",
+            "4   4 2013-01-01          1       BOOKS    0.0            0  2013      1    1   \n",
+            "\n",
+            "   dayofweek  weekend  is_month_start  is_month_end  transactions   city  \\\n",
+            "0          1        0            True         False           NaN  Quito   \n",
+            "1          1        0            True         False           NaN  Quito   \n",
+            "2          1        0            True         False           NaN  Quito   \n",
+            "3          1        0            True         False           NaN  Quito   \n",
+            "4          1        0            True         False           NaN  Quito   \n",
+            "\n",
+            "       state type  cluster  dcoilwtico  \n",
+            "0  Pichincha    D       13         NaN  \n",
+            "1  Pichincha    D       13         NaN  \n",
+            "2  Pichincha    D       13         NaN  \n",
+            "3  Pichincha    D       13         NaN  \n",
+            "4  Pichincha    D       13         NaN  \n"
+          ]
+        }
+      ]
     }
   ]
 }
