Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_12강.ipynb
+++ b/오픈소스_데이터_분석_12강.ipynb
@@ -572,12 +572,12 @@
         "df"
       ],
       "metadata": {
-        "id": "p-vTxsTUqegA",
-        "outputId": "ed4f1cfe-b2fd-45af-e3cf-e0f08575d0cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 606
-        }
+        },
+        "id": "p-vTxsTUqegA",
+        "outputId": "ed4f1cfe-b2fd-45af-e3cf-e0f08575d0cb"
       },
       "execution_count": 12,
       "outputs": [
@@ -1082,15 +1082,55 @@
       "cell_type": "code",
       "source": [
         "## 수치형 데이터 요약 통계 출력\n",
+        "print(\"수치형 데이터 요약 통계: \\n\", df.describe())\n",
+        "print(\"수치형 데이터 요약 통계: \\n\", df.describe().to_markdown()) ## 사용자 친화적으로\n",
         "\n",
-        "\n",
-        "## 범주형 데이터 요약 통계 출력\n"
+        "## 범주형 데이터 요약 통계 출력\n",
+        "print(\"범주형 데이터 요약 통계: \\n\", df.describe(include=['object']))\n"
       ],
       "metadata": {
-        "id": "HyFk8Gry-VpH"
+        "id": "HyFk8Gry-VpH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "035cc5b2-eb50-4054-f749-fd815a056bbf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "수치형 데이터 요약 통계: \n",
+            "               기준_날짜        기준_시간대         전체_건수       전체_이용_분      전체_이용_거리\n",
+            "count  7.769469e+06  7.769469e+06  7.769469e+06  7.769469e+06  7.769469e+06\n",
+            "mean   2.023042e+07  1.451496e+03  1.075130e+00  2.293263e+01  2.704273e+03\n",
+            "std    8.522043e+00  5.611313e+02  3.092643e-01  3.154944e+01  1.195193e+04\n",
+            "min    2.023040e+07  0.000000e+00  1.000000e+00  0.000000e+00  0.000000e+00\n",
+            "25%    2.023041e+07  1.020000e+03  1.000000e+00  6.000000e+00  8.540000e+02\n",
+            "50%    2.023042e+07  1.600000e+03  1.000000e+00  1.200000e+01  1.551000e+03\n",
+            "75%    2.023042e+07  1.855000e+03  1.000000e+00  2.700000e+01  2.990000e+03\n",
+            "max    2.023043e+07  2.355000e+03  1.700000e+01  2.001000e+03  1.294437e+07\n",
+            "수치형 데이터 요약 통계: \n",
+            " |       |   기준_날짜 |    기준_시간대 |    전체_건수 |   전체_이용_분 |   전체_이용_거리 |\n",
+            "|:------|------------:|---------------:|-------------:|---------------:|-----------------:|\n",
+            "| count | 7.76947e+06 |    7.76947e+06 |  7.76947e+06 |    7.76947e+06 |      7.76947e+06 |\n",
+            "| mean  | 2.02304e+07 | 1451.5         |  1.07513     |   22.9326      |   2704.27        |\n",
+            "| std   | 8.52204     |  561.131       |  0.309264    |   31.5494      |  11951.9         |\n",
+            "| min   | 2.02304e+07 |    0           |  1           |    0           |      0           |\n",
+            "| 25%   | 2.02304e+07 | 1020           |  1           |    6           |    854           |\n",
+            "| 50%   | 2.02304e+07 | 1600           |  1           |   12           |   1551           |\n",
+            "| 75%   | 2.02304e+07 | 1855           |  1           |   27           |   2990           |\n",
+            "| max   | 2.02304e+07 | 2355           | 17           | 2001           |      1.29444e+07 |\n",
+            "범주형 데이터 요약 통계: \n",
+            "           집계_기준 시작_대여소_ID     시작_대여소명 종료_대여소_ID     종료_대여소명\n",
+            "count   7769469   7769469     7769469   7769469     7737347\n",
+            "unique        2      2729        2733      2730        2732\n",
+            "top        출발시간   ST-2031  가양1동_039_8         X  가양1동_039_8\n",
+            "freq    3897362     27016       27016     32122       28092\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1105,6 +1145,8 @@
       "cell_type": "code",
       "source": [
         "## 결측치 제거\n",
+        "## 데이터 전체이용분에서 이상치데이터가 있으므로 제거하는 과정이 필요하다.\n",
+        "\n",
         "\n",
         "## '전체_이용_분' 컬럼 값 필터링 (1분 이하, 180분 이상 제거)\n",
         "\n",
