Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_12강.ipynb
+++ b/오픈소스_데이터_분석_12강.ipynb
@@ -1145,19 +1145,26 @@
       "cell_type": "code",
       "source": [
         "## 결측치 제거\n",
+        "df = df.dropna() # null 값 제거\n",
+        "\n",
         "## 데이터 전체이용분에서 이상치데이터가 있으므로 제거하는 과정이 필요하다.\n",
-        "\n",
-        "\n",
         "## '전체_이용_분' 컬럼 값 필터링 (1분 이하, 180분 이상 제거)\n",
+        "## boolean indexing\n",
+        "df = df[(df['전체_이용_분'] > 1) & df['전체_이용_분'] < 180]\n",
         "\n",
         "## '전체_이용_거리' 컬럼 값 필터링 (10M 이하, 10000M 이상 제거)\n",
+        "df = df[(df['전체_이용_거리'] > 10) & (df['전체_이용_거리'] < 10000)]\n",
         "\n",
-        "## '집계_기준' 컬럼 필터링 (출발시간만 사용)\n"
+        "## '집계_기준' 컬럼 필터링 (출발시간만 사용)\n",
+        "df = df[df['집계_기준'] == '출발시간']\n",
+        "\n",
+        "## 데이터를 추려서 데이터를 다시 만드는 것입니다.\n",
+        "# 집계 기준을 변화한 것."
       ],
       "metadata": {
         "id": "fJRGIq2N-XLc"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
