Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_12강.ipynb
+++ b/오픈소스_데이터_분석_12강.ipynb
@@ -201,7 +201,7 @@
         "id": "7jjkoE6h-TJs",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 306
+          "height": 204
         },
         "outputId": "82b3da53-833b-48d1-bd52-a069c6d3dc0e"
       },
@@ -574,7 +574,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
+          "height": 419
         },
         "id": "p-vTxsTUqegA",
         "outputId": "ed4f1cfe-b2fd-45af-e3cf-e0f08575d0cb"
@@ -1168,6 +1168,62 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "## 수치형 데이터 요약 통계 출력\n",
+        "print(\"수치형 데이터 요약 통계: \\n\", df.describe())\n",
+        "print(\"수치형 데이터 요약 통계: \\n\", df.describe().to_markdown()) ## 사용자 친화적으로\n",
+        "\n",
+        "## 범주형 데이터 요약 통계 출력\n",
+        "print(\"범주형 데이터 요약 통계: \\n\", df.describe(include=['object']))\n",
+        "\n",
+        "## 날짜가 20230411 이라는 큰 숫자로 인식하여 이걸 시간이라는 날짜로 변경하는 과정이 필요하다."
+      ],
+      "metadata": {
+        "id": "-d57ehd3s3XH",
+        "outputId": "dd9ad8a6-7d99-453a-bd04-2b6e073d91d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "수치형 데이터 요약 통계: \n",
+            "               기준_날짜        기준_시간대         전체_건수       전체_이용_분      전체_이용_거리\n",
+            "count  3.546433e+06  3.546433e+06  3.546433e+06  3.546433e+06  3.546433e+06\n",
+            "mean   2.023042e+07  1.430269e+03  1.057633e+00  2.018757e+01  2.212241e+03\n",
+            "std    8.491913e+00  5.616489e+02  2.591334e-01  2.407997e+01  1.907058e+03\n",
+            "min    2.023040e+07  0.000000e+00  1.000000e+00  0.000000e+00  1.100000e+01\n",
+            "25%    2.023041e+07  1.000000e+03  1.000000e+00  6.000000e+00  9.170000e+02\n",
+            "50%    2.023042e+07  1.545000e+03  1.000000e+00  1.200000e+01  1.565000e+03\n",
+            "75%    2.023042e+07  1.845000e+03  1.000000e+00  2.400000e+01  2.810000e+03\n",
+            "max    2.023043e+07  2.355000e+03  1.300000e+01  1.111000e+03  9.999000e+03\n",
+            "수치형 데이터 요약 통계: \n",
+            " |       |   기준_날짜 |    기준_시간대 |    전체_건수 |   전체_이용_분 |   전체_이용_거리 |\n",
+            "|:------|------------:|---------------:|-------------:|---------------:|-----------------:|\n",
+            "| count | 3.54643e+06 |    3.54643e+06 |  3.54643e+06 |    3.54643e+06 |      3.54643e+06 |\n",
+            "| mean  | 2.02304e+07 | 1430.27        |  1.05763     |   20.1876      |   2212.24        |\n",
+            "| std   | 8.49191     |  561.649       |  0.259133    |   24.08        |   1907.06        |\n",
+            "| min   | 2.02304e+07 |    0           |  1           |    0           |     11           |\n",
+            "| 25%   | 2.02304e+07 | 1000           |  1           |    6           |    917           |\n",
+            "| 50%   | 2.02304e+07 | 1545           |  1           |   12           |   1565           |\n",
+            "| 75%   | 2.02304e+07 | 1845           |  1           |   24           |   2810           |\n",
+            "| max   | 2.02304e+07 | 2355           | 13           | 1111           |   9999           |\n",
+            "범주형 데이터 요약 통계: \n",
+            "           집계_기준 시작_대여소_ID     시작_대여소명 종료_대여소_ID     종료_대여소명\n",
+            "count   3546433   3546433     3546433   3546433     3546433\n",
+            "unique        1      2726        2730      2724        2728\n",
+            "top        출발시간   ST-2031  가양1동_039_8   ST-2031  가양1동_039_8\n",
+            "freq    3546433     12821       12821     13452       13452\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 12-5 날짜/시간 데이터 형식 변환"
@@ -1180,6 +1236,7 @@
       "cell_type": "code",
       "source": [
         "## '기준_날짜' 컬럼 datetime 형식으로 변환 (%Y%m%d)\n",
+        "df['기준_날짜'] = pd.to_datetime(df['기준_날짜'], format='%Y%m%d')\n",
         "\n",
         "## '요일' 컬럼 생성\n",
         "day_mapping = {\n",
@@ -1190,12 +1247,15 @@
         "    'Friday': '금요일',\n",
         "    'Saturday': '토요일',\n",
         "    'Sunday': '일요일'\n",
-        "}\n"
+        "}\n",
+        "\n",
+        "## 함수형 프로그래밍으로 변경\n",
+        "df['요일'] = df['기준_날짜'].dt.day_name().map(day_mapping)"
       ],
       "metadata": {
         "id": "4UsXZZVa-Zps"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1216,10 +1276,40 @@
         "print(\"\\n범주형 데이터 요약 통계:\\n\", df.describe(include=['object']).to_markdown())"
       ],
       "metadata": {
-        "id": "3XX8cDDAoDC8"
+        "id": "3XX8cDDAoDC8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b378fcd9-9e58-4989-c372-0fa94fdc9bc4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "수치형 데이터 요약 통계:\n",
+            " |       | 기준_날짜                     |    기준_시간대 |    전체_건수 |   전체_이용_분 |   전체_이용_거리 |\n",
+            "|:------|:------------------------------|---------------:|-------------:|---------------:|-----------------:|\n",
+            "| count | 3546433                       |    3.54643e+06 |  3.54643e+06 |    3.54643e+06 |      3.54643e+06 |\n",
+            "| mean  | 2023-04-15 16:06:37.823503616 | 1430.27        |  1.05763     |   20.1876      |   2212.24        |\n",
+            "| min   | 2023-04-01 00:00:00           |    0           |  1           |    0           |     11           |\n",
+            "| 25%   | 2023-04-09 00:00:00           | 1000           |  1           |    6           |    917           |\n",
+            "| 50%   | 2023-04-16 00:00:00           | 1545           |  1           |   12           |   1565           |\n",
+            "| 75%   | 2023-04-23 00:00:00           | 1845           |  1           |   24           |   2810           |\n",
+            "| max   | 2023-04-30 00:00:00           | 2355           | 13           | 1111           |   9999           |\n",
+            "| std   | nan                           |  561.649       |  0.259133    |   24.08        |   1907.06        |\n",
+            "\n",
+            "범주형 데이터 요약 통계:\n",
+            " |        | 집계_기준   | 시작_대여소_ID   | 시작_대여소명   | 종료_대여소_ID   | 종료_대여소명   | 요일    |\n",
+            "|:-------|:------------|:-----------------|:----------------|:-----------------|:----------------|:--------|\n",
+            "| count  | 3546433     | 3546433          | 3546433         | 3546433          | 3546433         | 3546433 |\n",
+            "| unique | 1           | 2726             | 2730            | 2724             | 2728            | 7       |\n",
+            "| top    | 출발시간    | ST-2031          | 가양1동_039_8   | ST-2031          | 가양1동_039_8   | 월요일  |\n",
+            "| freq   | 3546433     | 12821            | 12821           | 13452            | 13452           | 600393  |\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
