Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_12강.ipynb
+++ b/오픈소스_데이터_분석_12강.ipynb
@@ -1180,11 +1180,11 @@
         "## 날짜가 20230411 이라는 큰 숫자로 인식하여 이걸 시간이라는 날짜로 변경하는 과정이 필요하다."
       ],
       "metadata": {
-        "id": "-d57ehd3s3XH",
-        "outputId": "dd9ad8a6-7d99-453a-bd04-2b6e073d91d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-d57ehd3s3XH",
+        "outputId": "dd9ad8a6-7d99-453a-bd04-2b6e073d91d7"
       },
       "execution_count": 20,
       "outputs": [
@@ -1333,15 +1333,39 @@
       "cell_type": "code",
       "source": [
         "## 요일별 이용량 계산 및 정렬\n",
+        "day_df = df['요일'].value_counts().reindex(day_mapping.values()) ## 인덱스 재설정\n",
         "\n",
         "## 요일별 이용량 출력\n",
-        "print(\"요일별 이용량:\\n\", day_df)"
+        "print(\"요일별 이용량:\\n\", day_df)\n",
+        "\n",
+        "## 시각화해보기"
       ],
       "metadata": {
-        "id": "9u1beOH7iEFO"
+        "id": "9u1beOH7iEFO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e3b538fd-02ac-4e1d-d15d-1e0bbaca9bec"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "요일별 이용량:\n",
+            " 요일\n",
+            "월요일    600393\n",
+            "화요일    397094\n",
+            "수요일    451350\n",
+            "목요일    484344\n",
+            "금요일    580500\n",
+            "토요일    499250\n",
+            "일요일    533502\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
