Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_12강.ipynb
+++ b/오픈소스_데이터_분석_12강.ipynb
@@ -1570,12 +1570,12 @@
         "rain_df"
       ],
       "metadata": {
-        "id": "ecWCq1_qJeZO",
-        "outputId": "59e6342d-ef61-4132-9b46-74e871508c07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "ecWCq1_qJeZO",
+        "outputId": "59e6342d-ef61-4132-9b46-74e871508c07"
       },
       "execution_count": 21,
       "outputs": [
@@ -2187,6 +2187,7 @@
         "merged_df = pd.merge(daily_usage_df, rain_df, how='left',left_on='기준_날',right_on='일시')\n",
         "\n",
         "## 'count' 컬럼명 '이용량'으로 변경\n",
+        "merged_df.rename(columns={'count':'이용량'}, inplace=True)\n",
         "\n",
         "merged_df.rename(columns={'count': '이용량'}, inplace=True)\n",
         "## 병합된 데이터프레임 상위 5행 출력\n",
