Colab을 통해 생성됨

--- a/오픈소스_데이터_분석_12강.ipynb
+++ b/오픈소스_데이터_분석_12강.ipynb
@@ -2654,9 +2654,14 @@
         "\n",
         "## 컬럼명 변경: '강수량(mm)' -> '강수량_mm' (formula API 호환을 위해)\n",
         "merged_onlyrain_df = merged_onlyrain_df.copy()\n",
+        "\n",
+        "## 괄호가 있으면 사용이 안되므로 광호를 제거했다.\n",
         "merged_onlyrain_df.rename(columns={'강수량(mm)': '강수량_mm'}, inplace=True)\n",
         "\n",
         "## OLS 모델 정의 및 학습\n",
+        "## 통계학적으로 의미가 있는지 분석한다.\n",
+        "model = smf.ols(formula='이용량 ~ 강수량_mm', data=merged_onlyrain_df)\n",
+        "\n",
         "\n",
         "results = model.fit()\n",
         "\n",
@@ -2666,6 +2671,7 @@
         "## 귀무가설 검증 해석\n",
         "## 강수량_mm 계수에 대한 p-value를 확인하여 귀무가설 (강수량이 이용량에 미치는 영향이 0이다) 검증\n",
         "## 일반적으로 p-value가 0.05 미만이면 귀무가설을 기각하고 유의미한 영향이 있다고 해석\n",
+        "\n",
         "print(\"\\n--- 귀무가설 검증 (강수량 계수) ---\")\n",
         "p_value = results.pvalues['강수량_mm']\n",
         "print(f\"강수량_mm 계수의 p-value: {p_value:.4f}\")\n",
@@ -2677,10 +2683,51 @@
         "    print(\"즉, 강수량은 자전거 이용량에 통계적으로 유의미한 영향을 미치지 않는다고 볼 수 있습니다.\")"
       ],
       "metadata": {
-        "id": "YGV-JoF9sHdt"
+        "id": "YGV-JoF9sHdt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "398a3096-a805-4a0d-e0ae-25eeccf6e771"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                    이용량   R-squared:                       0.507\n",
+            "Model:                            OLS   Adj. R-squared:                  0.452\n",
+            "Method:                 Least Squares   F-statistic:                     9.259\n",
+            "Date:                Mon, 24 Nov 2025   Prob (F-statistic):             0.0140\n",
+            "Time:                        14:08:17   Log-Likelihood:                -127.29\n",
+            "No. Observations:                  11   AIC:                             258.6\n",
+            "Df Residuals:                       9   BIC:                             259.4\n",
+            "Df Model:                           1                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "Intercept   1.045e+05   9962.011     10.494      0.000     8.2e+04    1.27e+05\n",
+            "강수량_mm     -1763.3006    579.489     -3.043      0.014   -3074.195    -452.406\n",
+            "==============================================================================\n",
+            "Omnibus:                        0.563   Durbin-Watson:                   2.501\n",
+            "Prob(Omnibus):                  0.755   Jarque-Bera (JB):                0.568\n",
+            "Skew:                           0.387   Prob(JB):                        0.753\n",
+            "Kurtosis:                       2.200   Cond. No.                         20.0\n",
+            "==============================================================================\n",
+            "\n",
+            "Notes:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "\n",
+            "--- 귀무가설 검증 (강수량 계수) ---\n",
+            "강수량_mm 계수의 p-value: 0.0140\n",
+            "p-value가 0.05보다 작으므로 귀무가설을 기각합니다.\n",
+            "즉, 강수량은 자전거 이용량에 통계적으로 유의미한 영향을 미칩니다.\n"
+          ]
+        }
+      ]
     }
   ]
 }
